Fixed main page carousel.  It no longer duplicates or collapses.  The carousel code in main.js should be cleaned up though.  Some of the data should be refactored into a factory/service.

--- a/app/views/main/main.css
+++ b/app/views/main/main.css
@@ -128,6 +128,14 @@ nav h1 {
   height: 650px;
  }
 
+.carousel {
+  overflow: hidden;
+}
+
+.carousel-inner > .item > img {
+  height: 600px;
+}
+
 .carousel-control.right {
   background-image: none;
 }
